--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="author" content="Adam, Wierzbanowski">
   <title>Pozycjonowanie elementów w CSS</title>
 
+  <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -12,6 +13,16 @@
   <header>
     <h1>Pozycjonowanie elementów w CSS</h1>
     <p>Przegląd właściwości position</p>
+
+    <nav>
+      <ul>
+        <a href="#static"><li>static</li></a>
+        <a href="#relative"><li>relative</li></a>
+        <a href="#fixed"><li>fixed</li></a>
+        <a href="#absolute"><li>absolute</li></a>
+        <a href="#sticky"><li>sticky</li></a>
+      </ul>
+    </nav>
   </header>
 
   <main>
